objects/PC_Applicant__c.object
<CustomObject>
    <fields>
        <fullName>PC_HP_Payer_Name__c</fullName>
        <description>The organization that provides reimbursement for Health Plan 1. 
Note: The organization may be a private insurance company or public (government) organization.</description>
        <label>HP Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP_Plan_Status__c</fullName>
        <description>The status of the health plan for Health Plan 1.</description>
        <label>HP Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_HealthPlan_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP_Plan_Type__c</fullName>
        <description>The primary, secondary, or tertiary health plan for the patient for Health Plan 1.</description>
        <label>HP Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_HealthPlan_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP_Record_Type__c</fullName>
        <description>The type of health plan the patient has access to, for Health Plan 1. For example, Private or Public.</description>
        <label>HP Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_HealthPlan_Record_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_HP_Rx_Bin__c</fullName>
        <description>The six-digit number that health plans can use to process electronic pharmacy claims for Health Plan 1.</description>
        <label>HP Rx Bin</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP_Rx_Grp__c</fullName>
        <description>The group number for pharmacy benefits claims for Health Plan 1.</description>
        <label>HP Rx Grp</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_HP_Rx_PCN__c</fullName>
        <description>PCN for Pharmacy Benefits Claims for Health Plan 1.</description>
        <label>HP Rx PCN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Initials__c</fullName>
        <description>The patient’s initials.</description>
        <label>Initials</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Insurance_Investigation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected when insurance investigation is done for the specific applicant.</description>
        <label>Insurance Investigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Insurance_Name__c</fullName>
        <description>The name of the patient&apos;s insurance company.</description>
        <label>Insurance Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_IsCreatedUsingOCR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the applicant created using OCR or not.</description>
        <inlineHelpText>Specifies whether the applicant created using OCR or not.</inlineHelpText>
        <label>Is Created Using OCR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_IsReviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the record is reviewed or not.</description>
        <inlineHelpText>Specifies whether the record is reviewed or not.</inlineHelpText>
        <label>Is Reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Last_Name__c</fullName>
        <description>The last name of the patient.</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Medication__c</fullName>
        <description>The name of the medication prescribed to a patient applicant.</description>
        <label>Medication</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Other_Language__c</fullName>
        <description>The other language known by the patient.</description>
        <label>Other Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Patient_Email__c</fullName>
        <description>Patient&apos;s email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PC_Patient_Name__c</fullName>
        <description>The name of the patient in the format: Last name, First name.</description>
        <formula>PC_Last_Name__c &amp; &apos;, &apos; &amp; PC_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Phone__c</fullName>
        <description>The phone number of the patient.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PC_Physician_City__c</fullName>
        <description>The city where the physician practices.</description>
        <label>Physician City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Physician_Email__c</fullName>
        <description>The email ID of the physician.</description>
        <label>Physician Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PC_Physician_Fax__c</fullName>
        <description>The Fax number of the physician.</description>
        <label>Physician Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Physician_Name__c</fullName>
        <description>The physician’s full name.</description>
        <label>Physician Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Physician_Phone__c</fullName>
        <description>The physician’s phone number.</description>
        <label>Physician Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PC_Physician_State__c</fullName>
        <description>The state associated with the physician&apos;s address.</description>
        <label>Physician State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Physician_Street_Address1__c</fullName>
        <description>The physician&apos;s Street Address1.</description>
        <label>Physician Street Address1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Physician_Street_Address2__c</fullName>
        <description>The physician&apos;s Street Address2.</description>
        <label>Physician Street Address2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Physician_Zipcode__c</fullName>
        <description>The zip code associated with the physician&apos;s address.</description>
        <label>Physician Zipcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Plan_Claim_Card_No__c</fullName>
        <description>The health plan claim or card number.</description>
        <label>Plan Claim / Card No.</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Preferred_Channel__c</fullName>
        <description>The patient&apos;s preferred channel of communication.</description>
        <label>Communication Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Postal Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Primary_Address1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if second address is primary or not</description>
        <label>Primary Address1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Primary_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected or checked when the address is the primary address.</description>
        <label>Primary Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Renewal_Date__c</fullName>
        <description>The date on which the health plan has to be renewed.</description>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PC_Salutation__c</fullName>
        <description>The patient’s salutation such as Mr., Ms., Mrs., and so on.</description>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PC_Salutation</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_Source__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked indicates that applicant is created via online form submission</description>
        <label>Source</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_State1__c</fullName>
        <description>The state associated with the patient&apos;s second address.</description>
        <label>State1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_State__c</fullName>
        <description>The state associated with the patient&apos;s address.</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if applicant has requested for training</description>
        <label>Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PC_Zip_Code1__c</fullName>
        <description>The zip code associated with the patient&apos;s second address.</description>
        <label>Zip Code1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Zip_Code__c</fullName>
        <description>The zip code associated with the patient&apos;s address.</description>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>PC_First_Name__c</columns>
        <columns>PC_Last_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Enrollment_Queue</fullName>
        <columns>NAME</columns>
        <columns>PC_Patient_Name__c</columns>
        <columns>PC_Gender__c</columns>
        <columns>PC_Patient_Email__c</columns>
        <columns>PC_Phone__c</columns>
        <columns>PC_Insurance_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Enrollment Queue</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AP-{0}</displayFormat>
        <label>Applicant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <recordTypes>
        <fullName>PC_Internal</fullName>
        <active>true</active>
        <description>Applicants generated from pre-enrollment wizard</description>
        <label>Internal</label>
    </recordTypes>
    <recordTypes>
        <fullName>PC_Online</fullName>
        <active>true</active>
        <description>Applicants generated from online form</description>
        <label>Online</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>